Fixed Horizontal layout (no more horizontal scroll) )<
no more horizontal scroll. ))<

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,6 +14,8 @@ body {
     font-family: "Source Sans Pro", sans-serif;
     font-size: .9em;
     line-height: 1em;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 /* link options */
@@ -30,8 +32,9 @@ font-family: "Source Sans Pro", sans-serif;
 }
 
 #slideout {
-    background: #252F41;
+    background: #212938;
     border-top: 1px solid #242A34;
+    border-right: 1px solid #242A34;
     position: relative;
     bottom: 0%;
     top: 0%;
@@ -168,6 +171,7 @@ font-family: "Source Sans Pro", sans-serif;
     border-bottom: .5px solid #242A34;
 }
 .navbar {
+    position:fixed;
     width:100vh;
     padding-top: 2vh;
     padding-left: 4vh;
@@ -189,13 +193,16 @@ font-family: "Source Sans Pro", sans-serif;
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 100;
     font-size: .8em;
+     transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: ease-out;
 }
 .navbar a:hover {
     color: #fff;
     background-color: #4B9877;
     border-color: #4B9877;
-     transition-property: all;
-  transition-duration: .5s;
+    transition-property: all;
+    transition-duration: .5s;
 }
 
 .navbar a:active{
@@ -227,17 +234,18 @@ font-family: "Source Sans Pro", sans-serif;
 
 #sidebar {
     z-index: 5px;
-    position: absolute;
+    position: fixed;
     right:0;
     width: 18%;
     height: 92vh;
-    background-color: #2F3B4E;
+    background-color: #252F41;
     border-left: .5px solid #242A34;
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .line-div {
   width:100%;
+  bottom:0;
   border-bottom: .5px solid #242A34;
   padding-top:1%;
 }
@@ -286,12 +294,12 @@ font-family: "Source Sans Pro", sans-serif;
 }
 
 .tablink:hover {
-  color: #2F3B4E;
+  color: #212938;
 }
 
 .tablink.is-active {
   color: #01B482;
-  background-color: #2F3B4E;
+  background-color: #252F41;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -364,7 +372,10 @@ font-family: "Source Sans Pro", sans-serif;
 
 
 #overflowss {
-    height: 72vh;
+    height: 82vh;
+    overflow-y:auto;
+     max-width: 100%;
+    overflow-x: hidden;
     
 }
 .playlistbtn {
@@ -382,12 +393,16 @@ font-family: "Source Sans Pro", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+     transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: ease-out;
 }
 
 .playlistbtn:hover {
   background-color:#212938;
   transition-property: all;
   transition-duration: .5s;
+  transition-timing-function: ease-out;
 }
 
 /*----------- Other ---------*/
@@ -436,6 +451,7 @@ font-family: "Source Sans Pro", sans-serif;
 
 .node {
     cursor: pointer;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 .overlay {
@@ -444,16 +460,15 @@ font-family: "Source Sans Pro", sans-serif;
 }
 
 .node circle, .node rect {
-    fill: #282828;
-    stroke: #ccc;
-    stroke-width: 1.5px;
+    fill: transparent;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 
 
 .node text {
     font-size: 10px; 
-    font-family: sans-serif;
+    font-family: "Avenir Next", sans-serif;
 }
 
 .link {
@@ -470,7 +485,7 @@ font-family: "Source Sans Pro", sans-serif;
 .trackBox {
     width: 90%;
     padding: 5%;
-    background-color: #252F41;
+    background-color: #212938;
     border: .5px solid #242A34;
     color:#959da0;
 }
